Fix css and alter page width
Fixed scrollbar showing on Chrome
Alter the page width size to col 10

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,7 @@
 html {
     font-family: sans-serif;
 }
-body, html {
-    overflow-x: hidden;
-}
+
 body {
 	margin: 0;
     -moz-osx-font-smoothing: grayscale;
